<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.photodetails.PhotoDetailsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/photo_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/desc_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_user_username"
        style="@style/Theme.Picttr.Subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/photo_container"
        tools:text="Rizki Fajar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_image_description"
        style="@style/Theme.Picttr.Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_user_username"
        tools:text="Here goes the image description. Image description should describe the image clearly to send message to the viewer." />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_location"
        style="@style/Theme.Picttr.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_image_description"
        tools:text="Jakarta, Indonesia" />

    <Space
        android:id="@+id/spacer1"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_location" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_likes"
        style="@style/Theme.Picttr.Subtitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_likes"
        app:layout_constraintEnd_toStartOf="@id/tv_title_downloads"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/spacer1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_item_likes"
        style="@style/Theme.Picttr.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tv_title_likes"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_likes"
        tools:text="3.4K" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_downloads"
        style="@style/Theme.Picttr.Subtitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_downloads"
        app:layout_constraintEnd_toStartOf="@id/tv_title_views"
        app:layout_constraintStart_toEndOf="@id/tv_title_likes"
        app:layout_constraintTop_toTopOf="@+id/tv_title_likes" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_item_downloads"
        style="@style/Theme.Picttr.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tv_title_downloads"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_downloads"
        tools:text="30K" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_views"
        style="@style/Theme.Picttr.Subtitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_views"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toEndOf="@id/tv_title_downloads"
        app:layout_constraintTop_toTopOf="@+id/tv_title_downloads" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_item_views"
        style="@style/Theme.Picttr.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tv_title_views"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_views"
        tools:text="1.9M" />

    <Space
        android:id="@+id/spacer2"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_item_likes" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_camera"
        style="@style/Theme.Picttr.Subtitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exif_camera"
        app:layout_constraintEnd_toStartOf="@+id/tv_title_focal_length"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/spacer2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_item_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/tv_title_camera"
        app:layout_constraintStart_toStartOf="@+id/tv_title_camera"
        app:layout_constraintTop_toBottomOf="@id/tv_title_camera"
        tools:text="Canon EOS 5D Mark IV" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_focal_length"
        style="@style/Theme.Picttr.Subtitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exif_focal_length"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toEndOf="@id/tv_title_camera"
        app:layout_constraintTop_toTopOf="@+id/tv_title_camera" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_item_focal_length"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/tv_title_focal_length"
        app:layout_constraintStart_toStartOf="@+id/tv_title_focal_length"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_focal_length"
        tools:text="35" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_aperture"
        style="@style/Theme.Picttr.Subtitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/exif_aperture"
        app:layout_constraintEnd_toStartOf="@+id/tv_title_shutter"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_item_camera" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_item_aperture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/tv_title_aperture"
        app:layout_constraintStart_toStartOf="@+id/tv_title_aperture"
        app:layout_constraintTop_toBottomOf="@id/tv_title_aperture"
        tools:text="f/1.45" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_shutter"
        style="@style/Theme.Picttr.Subtitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exif_shutter"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toEndOf="@id/tv_title_aperture"
        app:layout_constraintTop_toTopOf="@+id/tv_title_aperture" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_item_shutter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/tv_title_shutter"
        app:layout_constraintStart_toStartOf="@+id/tv_title_shutter"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_shutter"
        tools:text="1/320s" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_iso"
        style="@style/Theme.Picttr.Subtitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/exif_iso"
        app:layout_constraintEnd_toStartOf="@id/tv_title_dimension"
        app:layout_constraintStart_toEndOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_aperture" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_item_iso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/tv_title_iso"
        app:layout_constraintStart_toStartOf="@+id/tv_title_iso"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_iso"
        tools:text="400" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_dimension"
        style="@style/Theme.Picttr.Subtitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exif_dimension"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toEndOf="@id/tv_title_iso"
        app:layout_constraintTop_toTopOf="@+id/tv_title_iso" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_item_dimension"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/tv_title_dimension"
        app:layout_constraintStart_toStartOf="@+id/tv_title_dimension"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_dimension"
        tools:text="4000 x 6000" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="599dp" />

</androidx.constraintlayout.widget.ConstraintLayout>